# docs/swagger.yaml
@@ -5,14 +5,16 @@ definitions:
       error:
         type: string
     type: object
-  httputils.MessageJSON:
-    properties:
-      message:
-        type: string
-    type: object
   models.AuthResponse:
     properties:
       token:
+        type: string
+    type: object
+  models.JWTClaim:
+    properties:
+      id:
+        type: integer
+      login:
         type: string
     type: object
   models.LoginRequest:
@@ -44,18 +46,18 @@ info:
   title: Gophermart API
   version: "1.0"
 paths:
-  /api/user/is-auth:
+  /api/user/info:
     get:
       consumes:
       - application/json
-      description: Проверяет авторизацию пользователя
+      description: Информация о пользователе возвращается id и логин
       produces:
       - application/json
       responses:
         "200":
-          description: OK
+          description: User info
           schema:
-            $ref: '#/definitions/httputils.MessageJSON'
+            $ref: '#/definitions/models.JWTClaim'
         "401":
           description: Unauthorized
           schema:
@@ -66,7 +68,7 @@ paths:
             $ref: '#/definitions/httputils.ErrorJSON'
       security:
       - BearerAuth: []
-      summary: Проверка авторизации
+      summary: Информация о пользователе
       tags:
       - Auth
   /api/user/login:
